--- a/gamedev/style.css
+++ b/gamedev/style.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap');
 
 :root {
-  --bg: var(--secondcolor-background);
+  --bg: #3A4242;
   --card: #2a2a2a;
   --text: #e0e0e0;
-  --main: var(--secondcolor-primary);
-  --main-dark: var(--secondcolor-secondary);
+  --main: #65BEBB;
+  --main-dark: #71A6A6;
 }
 
 body {
